@@ -1,3 +1,8 @@
+2006-12-05  Jb Evain  <jbevain@gmail.com>
+
+	* Mono.Cecil/ReflectionWriter.cs:
+		Deal with nullref default parameters.
+
 2006-12-03  Jb Evain  <jbevain@gmail.com>
 
 	* Mono.Cecil/ReflectionWriter.cs:
